# VTKQtCore

./: .gitignore  CMakeLists.txt  UI_FRAMEWORK_GUIDE.md  run_server.py  全局MGET轮询分发说明.md  声音播放使用说明.md  模块内Redis读取使用说明.md  模块间UI事件接口说明.md  软件编写指南.md
src/: main.cpp
src/app/audio/: PromptAudioService.cpp  PromptAudioService.h
src/app/resources/: app_resources.qrc  redis_dispatch_config.json
src/app/software/: BaseSoftwareInitializer.cpp  BaseSoftwareInitializer.h  ConfigDrivenSampleParser.cpp  ConfigDrivenSampleParser.h  DefaultGlobalPollingSampleParser.cpp  DefaultGlobalPollingSampleParser.h  ModuleUiAssemblers.cpp  ModuleUiAssemblers.h  RedisSoftwareResolver.cpp  RedisSoftwareResolver.h  SoftwareInitializerFactory.cpp  SoftwareInitializerFactory.h
src/app/software/ConcreteSoftwareInitializers/: DefaultSoftwareInitializer.cpp  DefaultSoftwareInitializer.h  PlanningNavigationSoftwareInitializer.cpp  PlanningNavigationSoftwareInitializer.h
src/communication/: MessageDispatchCenter.cpp  MessageDispatchCenter.h  RedisConnectionConfig.h  RedisConnectionWorker.cpp  RedisConnectionWorker.h
src/communication/config/: RedisDispatchConfig.cpp  RedisDispatchConfig.h  RedisDispatchConfigLoader.cpp  RedisDispatchConfigLoader.h
src/communication/datasource/: GlobalPollingPlan.cpp  GlobalPollingPlan.h  PerConnectionPollingBundle.cpp  PerConnectionPollingBundle.h  PollingSource.cpp  PollingSource.h  PollingTask.cpp  PollingTask.h  SourceBase.cpp  SourceBase.h  StateSample.h  SubscriptionSource.cpp  SubscriptionSource.h
src/communication/hub/: CommunicationHub.cpp  CommunicationHub.h  IRedisCommandAccess.h
src/communication/redis/: RedisConnectionConfig.cpp  RedisConnectionConfig.h  RedisConnectionWorker.cpp  RedisConnectionWorker.h  RedisDataCenter.cpp  RedisDataCenter.h  RedisGateway.cpp  RedisGateway.h  RedisLogicCommandAccess.cpp  RedisLogicCommandAccess.h  RedisPollingWorker.cpp  RedisPollingWorker.h
src/communication/routing/: MessageRouter.cpp  MessageRouter.h
src/contracts/: LogicNotification.h  ModuleInvoke.h  ModuleUiEvent.h  PromptAudioPresetIds.h  UiAction.h
src/display/: BillboardArrowNodeDisplayManager.cpp  BillboardArrowNodeDisplayManager.h  BillboardLineNodeDisplayManager.cpp  BillboardLineNodeDisplayManager.h  LineNodeDisplayManager.cpp  LineNodeDisplayManager.h  ModelNodeDisplayManager.cpp  ModelNodeDisplayManager.h  NodeDisplayManager.cpp  NodeDisplayManager.h  PointNodeDisplayManager.cpp  PointNodeDisplayManager.h  TransformNodeDisplayManager.cpp  TransformNodeDisplayManager.h
src/logic/gateway/: ILogicGateway.h  LocalLogicGateway.cpp  LocalLogicGateway.h
src/logic/registry/: ModuleLogicHandler.cpp  ModuleLogicHandler.h  ModuleLogicRegistry.cpp  ModuleLogicRegistry.h
src/logic/runtime/: GlobalPollingSampleParser.h  IModuleInvoker.h  IPromptAudioService.h  LogicRuntime.cpp  LogicRuntime.h
src/logic/scene/: SceneGraph.cpp  SceneGraph.h
src/logic/scene/nodes/: BillboardArrowNode.cpp  BillboardArrowNode.h  BillboardLineNode.cpp  BillboardLineNode.h  LineNode.cpp  LineNode.h  ModelNode.cpp  ModelNode.h  NodeBase.cpp  NodeBase.h  PointNode.cpp  PointNode.h  TransformNode.cpp  TransformNode.h
src/logic/workflow/: ActiveModuleState.cpp  ActiveModuleState.h  WorkflowStateMachine.cpp  WorkflowStateMachine.h
src/modules/datagen/: DataGenModuleLogicHandler.cpp  DataGenModuleLogicHandler.h  DataGenPage.cpp  DataGenPage.h
src/modules/intermoduletest/: InterModuleReceiverLogicHandler.cpp  InterModuleReceiverLogicHandler.h  InterModuleReceiverWidget.cpp  InterModuleReceiverWidget.h  InterModuleSenderLogicHandler.cpp  InterModuleSenderLogicHandler.h  InterModuleSenderWidget.cpp  InterModuleSenderWidget.h  InterModuleTestConstants.h
src/modules/kneePlane/: kneePlaneContants.h  kneePlaneLogicHandler.cpp  kneePlaneLogicHandler.h
src/modules/navigation/: NavigationModuleLogicHandler.cpp  NavigationModuleLogicHandler.h  NavigationPage.cpp  NavigationPage.h  NavigationUiCommands.h
src/modules/params/: ParamsModuleLogicHandler.cpp  ParamsModuleLogicHandler.h  ParamsPage.cpp  ParamsPage.h  ParamsUiCommands.h
src/modules/planning/: PlanningModuleLogicHandler.cpp  PlanningModuleLogicHandler.h  PlanningPage.cpp  PlanningPage.h  PlanningUiCommands.h
src/modules/pointpick/: PointPickModuleLogicHandler.cpp  PointPickModuleLogicHandler.h  PointPickPage.cpp  PointPickPage.h  PointPickPage.ui  PointPickStatusPanel.cpp  PointPickStatusPanel.h  PointPickStatusPanel.ui  PointPickUiCommands.h  pointpick.qrc  pointpick_rc.py
src/modules/workflowshell/: ModuleNavigationModule.cpp  ModuleNavigationModule.h  ModuleStatusBarModule.cpp  ModuleStatusBarModule.h
src/resources/: styles.qrc  styles_rc.py
src/resources/audio/: audio_prompts.qrc
src/resources/styles/: app-theme.qss
src/shell/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ShellStatusBar.cpp  ShellStatusBar.h  ShellWorkflowMenu.cpp  ShellWorkflowMenu.h  WorkspaceShell.cpp  WorkspaceShell.h  mainwindow.qrc  mainwindow_rc.py
src/ui/coordination/: ApplicationCoordinator.cpp  ApplicationCoordinator.h  ModuleCoordinator.cpp  ModuleCoordinator.h  ModuleUiEventBinding.h  UiActionDispatcher.cpp  UiActionDispatcher.h
src/ui/globalui/: AppStyleManager.cpp  AppStyleManager.h  GlobalUiManager.cpp  GlobalUiManager.h
src/ui/pages/: PageManager.cpp  PageManager.h
src/ui/vtk3d/: VtkSceneWindow.cpp  VtkSceneWindow.h
